# hellowordstore

./: README.md  note
contract/: Cargo.toml
contract/src/: main.rs
tests/: Cargo.toml
tests/wasm/: contract.wasm
